--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="GameScene\StageSelect\HexChip\HexChip.cpp" />
     <ClCompile Include="GameScene\TitleScene.cpp" />
     <ClCompile Include="GameScene\TitleScene\Button.cpp" />
+    <ClCompile Include="GameScene\TitleScene\Kakko.cpp" />
     <ClCompile Include="LoadSaveFunc.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RectCurtain\RectCurtain.cpp" />
@@ -179,14 +180,16 @@
     <ClInclude Include="GameScene\StageStateFlag.hpp" />
     <ClInclude Include="GameScene\TitleScene.hpp" />
     <ClInclude Include="GameScene\TitleScene\Button.hpp" />
+    <ClInclude Include="GameScene\TitleScene\ButtonParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\CursorPos.hpp" />
+    <ClInclude Include="GameScene\TitleScene\Kakko.hpp" />
+    <ClInclude Include="GameScene\TitleScene\KakkoParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleSceneParam.hpp" />
     <ClInclude Include="GameScene\Utility\HexVec.hpp" />
     <ClInclude Include="LoadSaveFunc.hpp" />
     <ClInclude Include="RectCurtain\RectCurtain.hpp" />
     <ClInclude Include="RectCurtain\RectCurtainParam.hpp" />
     <ClInclude Include="StageData.hpp" />
-    <ClInclude Include="StartGameData.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
