--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="LoadSaveFunc.cpp" />
     <ClCompile Include="GameScene\TitleScene.cpp" />
     <ClCompile Include="GameScene\TitleScene\Button.cpp" />
+    <ClCompile Include="GameScene\TitleScene\Kakko.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameScene\StageSelect\DataDisplay\StringDisplay.hpp" />
@@ -41,6 +42,8 @@
     <ClInclude Include="GameScene\TitleScene\Button.hpp" />
     <ClInclude Include="GameScene\TitleScene\CursorPos.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleSceneParam.hpp" />
-    <ClInclude Include="StartGameData.hpp" />
+    <ClInclude Include="GameScene\TitleScene\Kakko.hpp" />
+    <ClInclude Include="GameScene\TitleScene\ButtonParam.hpp" />
+    <ClInclude Include="GameScene\TitleScene\KakkoParam.hpp" />
   </ItemGroup>
 </Project>
