--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -13,11 +13,10 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="LoadSaveFunc.cpp" />
     <ClCompile Include="GameScene\TitleScene.cpp" />
-    <ClCompile Include="GameScene\TitleScene\Button.cpp" />
-    <ClCompile Include="GameScene\TitleScene\Kakko.cpp" />
     <ClCompile Include="GameScene\TitleScene\TitleLogo.cpp" />
     <ClCompile Include="TemporaryMessage\TemporaryMessage.cpp" />
     <ClCompile Include="GameScene\GameOverScene.cpp" />
+    <ClCompile Include="GameScene\TitleScene\SelectButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameScene\StageSelect\DataDisplay\StringDisplay.hpp" />
@@ -42,16 +41,14 @@
     <ClInclude Include="StageData.hpp" />
     <ClInclude Include="LoadSaveFunc.hpp" />
     <ClInclude Include="GameScene\TitleScene.hpp" />
-    <ClInclude Include="GameScene\TitleScene\Button.hpp" />
     <ClInclude Include="GameScene\TitleScene\CursorPos.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleSceneParam.hpp" />
-    <ClInclude Include="GameScene\TitleScene\Kakko.hpp" />
     <ClInclude Include="GameScene\TitleScene\ButtonParam.hpp" />
-    <ClInclude Include="GameScene\TitleScene\KakkoParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleLogo.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleLogoParam.hpp" />
     <ClInclude Include="TemporaryMessage\TemporaryMessage.hpp" />
     <ClInclude Include="GameParam.hpp" />
     <ClInclude Include="GameScene\GameOverScene.hpp" />
+    <ClInclude Include="GameScene\TitleScene\SelectButton.hpp" />
   </ItemGroup>
 </Project>
