--- a/StageEditor/StageEditor.vcxproj.filters
+++ b/StageEditor/StageEditor.vcxproj.filters
@@ -39,6 +39,7 @@
     <ClCompile Include="SceneEditor\ActorEditor\MoveLiftEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\HeadBlockEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\StandEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\IceGroundEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera\EditorCamera.hpp" />
@@ -82,5 +83,6 @@
     <ClInclude Include="SceneEditor\ActorEditor\MoveLiftEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\HeadBlockEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\StandEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\IceGroundEditor.hpp" />
   </ItemGroup>
 </Project>
