--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="GameScene\StageSelect\MoveKeyAssist\KeyHex.cpp" />
     <ClCompile Include="GameScene\TitleScene.cpp" />
     <ClCompile Include="GameScene\TitleScene\SelectButton.cpp" />
+    <ClCompile Include="GameScene\TitleScene\StarDisplay.cpp" />
     <ClCompile Include="GameScene\TitleScene\TitleLogo.cpp" />
     <ClCompile Include="LoadSaveFunc.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -204,6 +205,8 @@
     <ClInclude Include="GameScene\TitleScene\SelectButton.hpp" />
     <ClInclude Include="GameScene\TitleScene\ButtonParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\CursorPos.hpp" />
+    <ClInclude Include="GameScene\TitleScene\StarDisplay.hpp" />
+    <ClInclude Include="GameScene\TitleScene\StardisplayParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleLogo.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleLogoParam.hpp" />
     <ClInclude Include="GameScene\TitleScene\TitleSceneParam.hpp" />
